hphp/test/zend/bad/ext-standard/php_real_logo_guid.php
<?php
echo php_real_logo_guid();
?>